Fixed checkout button overlapping add to cart when selected.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1554,6 +1554,9 @@ hr {
             @media @mobile {
                 width:100%;
             }
+            &.ecom-product-add-to-cart-btn {
+                margin-bottom: 20px;
+            }
             &.ecom-product-add-to-cart-btn .text:before {
                 content: "";
                 background-image: image('/images/basketicon.png');
@@ -1564,6 +1567,10 @@ hr {
                 margin: 0 10px 0 0;
                 position: relative;
                 top:4px;
+            }
+            .ecom-product-go-to-checkout-btn {
+                padding: 12px 25px;
+                text-decoration: none;
             }
         }
 
